--- a/components/navbar/NavBar.module.css
+++ b/components/navbar/NavBar.module.css
@@ -7,7 +7,7 @@
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     position: fixed;
     z-index: 1000;
-    background-color: white;
+    background-color: #f0f0f0;
 }
 
 .container {
@@ -25,8 +25,9 @@
 
 .logoImg img {
     object-fit: contain;
-    width: 90% !important;
+    width: 100% !important;
     aspect-ratio: 1/3 !important;
+    mix-blend-mode: luminosity;
 }
 
 .logoImg img:hover {
